:lipstick: Fix weird scrollbars

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,6 +14,7 @@ html, body, #app, #app > * {
     background: $darkpurple;
     width: 100%;
     height: 100%;
+    overflow: hidden; // for tentacles
 }
 
 // Components
